# shep

./: .gitignore  Cargo.toml  Dockerfile  Gopkg.toml  Makefile  README.md  doc.go  glide.yaml  test.yaml  vendor.conf
cmd/shep/: main.go
docs/: commands.md  configuration.md  functionality.md
pkg/cli/: doc.go  run.go
pkg/fs/: doc.go  system.go  system_test.go
pkg/scheduler/: doc.go  github.go  start.go  trello.go
pkg/service/: doc.go  github.go  start.go
pkg/services/: bitbucket.go  ci-server.go  concourse.go  doc.go  github.go  irc.go  jenkins.go  service.go  system.go  system_test.go  travis.go  trello.go
src/: core.rs  main.rs  persistence.rs  util.rs
src/persistence/: mod.rs  rediskv.rs
src/vcs/: bitbucket.rs  github.rs  gitlab.rs  mod.rs
