[package]
name = "shep"
version = "0.1.0"
authors = ["Victor Palade <victor@cloudflavor.io>"]

[dependencies]
clap = "~2.33.0"
config = "0.9"
serde = "~1.0"
serde_derive = "~1.0"
serde_yaml = "~0.8.9"
log = "0.4.6"
ctrlc = { version = "3.1", features = ["termination"] }
env_logger = "0.6.1"
github-rs = "0.7.0"
redis = "0.10.0"
actix = "0.8.3"
failure = "0.1.5"
structopt = "^0.2.10"